examples/test/testpolicy19900.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19900
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key25: value26
      key2: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value4
          key26: value1
      podSelector:
        matchLabels:
          key23: value6
